test(backend): cover concurrent outbox relay, MinIO timeout/network failures, and controller DTO validation boundaries